Add referral system with affiliate links and wallet features
- Add referral system: track referrals, generate affiliate links, reward system (30 EGP for every 5 completed referrals)
- Add wallet features: balance display, top-up with Paymob, transaction history, card management
- Add trips screen: display user trip history with all details
- Add free balance screen: referral program UI with sharing functionality
- Update home screen: display username and phone in side menu, update menu items
- Add database migrations: user_cards and referrals tables
- Add new API controllers: MobileReferralController, MobileTripController, MobileWalletController
- Add Flutter models: ReferralModel, CardModel, TripModel, WalletTransactionModel
- Update API service: add methods for wallet, trips, referrals, and cards
- Fix referral code generation and affiliate link sharing

--- a/mobile_app/ios/Runner/Info.plist
+++ b/mobile_app/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>نحتاج إلى موقعك لعرض السكوترات القريبة منك</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>نحتاج إلى موقعك لعرض السكوترات القريبة منك</string>
 </dict>
 </plist>
