--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -54,6 +54,15 @@ dependencies:
   
   # Form Validation
   email_validator: ^2.1.17
+  
+  # Google Fonts
+  google_fonts: ^6.1.0
+  
+  # URL Launcher
+  url_launcher: ^6.2.5
+  
+  # Share
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
