--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   
   # HTTP & API
@@ -33,12 +35,13 @@ dependencies:
   flutter_animate: ^4.5.0
   
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
   uuid: ^4.3.3
   connectivity_plus: ^5.0.2
   
   # QR Code
   qr_flutter: ^4.1.0
+  mobile_scanner: ^5.2.3
   
   # WebSocket
   web_socket_channel: ^2.4.0
