إضافة زر فتح القفل أثناء الرحلة النشطة
Backend:
- إضافة is_locked في getActiveTrip response
- إضافة endpoint /trips/unlock-scooter لفتح القفل أثناء الرحلة النشطة
- تسجيل حدث فتح القفل في السجل
- إرسال أمر فتح القفل عبر WebSocket

Frontend:
- إضافة constant unlockScooter في ApiConstants
- إضافة method unlockScooter في ApiService
- إضافة متغيرات _isScooterLocked و _isUnlocking في ActiveTripScreen
- إضافة دالة _unlockScooter لفتح القفل
- إضافة زر 'فتح القفل' يظهر إذا كان القفل مغلق أثناء الرحلة
- تحديث حالة القفل عند تحميل بيانات البطارية

المميزات:
- إذا أغلق العميل القفل بالخطأ أثناء الرحلة ولم ينهي الرحلة، سيظهر له زر لفتح القفل
- الزر يظهر فقط عندما يكون القفل مغلق
- بعد فتح القفل بنجاح، يختفي الزر تلقائياً

--- a/mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/mobile_app/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,26 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <!-- Internet Permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <!-- Location Permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Android 12+ (API 31+) requires foreground service type for location -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <!-- Android 13+ (API 33+) requires POST_NOTIFICATIONS for notifications -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     
     <!-- Camera Permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+    
+    <!-- Storage Permissions - Only for older Android versions -->
+    <!-- Note: We use camera only, so we don't need READ_MEDIA_IMAGES/VIDEO -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29" tools:ignore="ScopedStorage" />
     
     <application
         android:label="Liner Scoot"
