--- a/mobile_app/android/gradle.properties
+++ b/mobile_app/android/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+
+# Note: Support for 16 KB page size is automatically handled by Flutter
+# and modern Android Gradle Plugin versions (8.1+).
+# No additional configuration needed.
