--- a/mobile_app/.gitignore
+++ b/mobile_app/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Keystore files (DO NOT COMMIT!)
+/android/key.properties
+/android/*.jks
+/android/*.keystore
+*.jks
+*.keystore
